# imap-mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: bdd.yml  ci.yml  release.yml
bdd/: README.md  behave.ini  pyproject.toml
bdd/docker/: README.md  docker-compose.yml
bdd/docker/dovecot/: Dockerfile
bdd/docker/dovecot/conf/: dovecot.conf
bdd/docker/dovecot/users/: README.md  a.passwd  b.passwd
bdd/features/: environment.py
bdd/features/audit/: audit_log_format.feature  audit_retention.feature
bdd/features/auth/: caller_authentication.feature  explicit_imap_user.feature  oauth2_bootstrap.feature  secret_store_backends.feature
bdd/features/performance/: connection_reuse.feature
bdd/features/policy/: blacklist_folder_mode.feature  default_deny.feature  draft_consistency.feature  flagged_predicate.feature  modify_message_capability.feature  policy_reload.feature  sender_rule_matcher.feature  visibility_levels.feature  whitelist_folder_mode.feature  write_capabilities.feature
bdd/features/providers/: gmail_label_semantics.feature  imap_mailbox_names_utf8.feature  localized_gmail_folders.feature
bdd/features/steps/: assertion_steps.py  gmail_steps.py  imap_utf7_steps.py  mcp_steps.py  oauth_steps.py  policy_steps.py
bdd/features/tool_surface/: add_attachment.feature  attachment_discovery.feature  bulk_mark_seen.feature  bulk_mark_tagged.feature  create_draft_error_visibility.feature  create_reply_draft.feature  default_scope_transparency.feature  delete_attachment.feature  fetch_attachment_content.feature  fetch_attachment_sink.feature  fetch_body_attachment_metadata.feature  fetch_body_html_fallback.feature  folder_path_contract.feature  inline_attachment_detection.feature  list_attachments.feature  list_folders_message_count.feature  list_messages.feature  mcp_tool_discovery.feature  non_goal_rejection.feature  reason_code_contract.feature  replace_attachment.feature  response_transparency.feature  search_blacklist_fast_path.feature  search_criteria_and_pagination.feature  tool_surface_info.feature
bdd/features/transactions/: cross_account_move_saga.feature  intra_account_move.feature  message_rewrite_recovery.feature  saga_crash_recovery.feature
bdd/mock-gmail/: README.md  pyproject.toml
bdd/mock-gmail/credentials/: app-password.secret
bdd/mock-gmail/src/mock_gmail/: __main__.py  server.py  state.py
bdd/mock-gmail/traces/direct/: capability.txt
bdd/mock-oauth/: README.md  pyproject.toml
bdd/mock-oauth/src/mock_oauth/: __init__.py  client.py
bdd/mock-oauth/tests/: test_validation.py
bdd/support/: __init__.py  audit_reader.py  imap_fixture.py  imap_proxy.py  mcp_client.py  policy_builder.py  server_bootstrap.py  wal_reader.py
docs/: ROADMAP.md  error_path_analysis.md
docs/adr/: 0000-record-architecture-decisions.md  0001-default-deny-hierarchical-policy.md  0002-linear-visibility-levels.md  0003-whitelist-blacklist-folder-modes.md  0004-sender-rule-matcher-grammar.md  0005-per-folder-write-capabilities.md  0006-cross-account-move-via-saga.md  0007-sqlite-as-wal-store.md  0008-idempotency-via-message-id-and-hash.md  0009-oauth2-authorization-code-with-scope-minimization.md  0010-configurable-token-cache-strategy.md  0011-pluggable-secret-store-backend.md  0012-python-runtime-and-library-stack.md  0013-hybrid-connection-pool.md  0014-policy-as-git-versioned-yaml.md  0015-caller-identity-and-authentication.md  0016-mcp-tool-set.md  0017-response-transparency-for-filtered-data.md  0018-non-goal-tool-surface.md  0019-gmail-label-semantics.md  0020-imap-agent-as-future-client.md  0021-audit-log-format.md  0022-audit-retention-and-access-model.md  0023-test-only-control-surface.md  0024-duration-grammar-single-source.md  0025-folder-path-contract-and-error-taxonomy.md  0026-tool-surface-consistency.md  0027-error-envelope-and-tool-surface-versioning.md  0028-attachment-file-sink-delivery.md  README.md  TEMPLATE.md
docs/limitations/: 0001-reason-code-symmetry-in-bdd.md  0002-gmail-scenarios-not-runnable.md  0003-oauth2-scenarios-not-runnable.md  0004-imap-fault-injection-via-env-var.md  0005-imap-mitm-scenarios-deferred.md  0006-5-tuple-fallback-deferred.md  0007-http-transport-deferred.md  0008-sighup-policy-reload-deferred.md  0009-audit-day-roll-deferred.md  0010-production-imap-bdd-gaps.md  0011-bulk-move-deferred.md  0011-search-performance-large-mailbox.md  0012-wire-response-transparency-uneven-across-tools.md  0013-single-attachment-sink-path.md  0014-attachment-sink-requires-caller-filesystem-access.md  0015-attachment-sink-cleanup-out-of-scope.md  0016-attachment-sink-path-disclosed-in-tool-description.md  0017-expired-oauth-token-not-proactively-or-durably-detectable.md  0018-oauth-reauth-not-initiable-from-mcp-no-remediation-guidance.md  README.md  TEMPLATE.md
docs/ops/: arc-runner-setup.md
docs/spec-audit/: README.md  TEMPLATE.md
ops/tracing/: README.md  docker-compose.yml
server/: CHANGELOG.md  README.md  pyproject.toml
server/src/imap_mcp/: __init__.py  __main__.py  audit.py  config.py  context.py  dispatch.py  fault_injection.py  imap_core.py  policy.py  reload.py  reply.py  saga.py  secrets.py  server.py  test_hooks.py  tracing.py  wal.py
server/src/imap_mcp/auth/: oauth_bootstrap.py  oauth_manager.py
server/src/imap_mcp/handlers/: _common.py  accounts.py  attachments.py  drafts.py  fetch.py  folder.py  introspection.py  mark.py  move.py  search.py  test_only.py
server/src/imap_mcp/runtime/: http.py  stdio.py
server/tests/: README.md
server/tests/policy/: test_pdp_properties.py
