[project]
name = "imap-mcp-bdd"
version = "0.1.0"
description = "BDD test suite for imap-mcp. Talks to the server via MCP protocol only; no source-level imports from ../server/."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

# BDD harness dependencies. Deliberately excludes anything from ../server/.
# The server is exercised as a black box: started as a stdio subprocess and
# driven through the MCP protocol, plus filesystem inspection for the audit
# log and the saga WAL.
dependencies = [
    "behave>=1.2.6",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "pytest>=8.0",
    "aioimaplib>=1.1.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project ships no importable package. `support/` is added to
# sys.path by behave's environment.py at runtime. The build-system
# declaration here exists solely to let `pip install -e .` resolve
# the dependency list above.
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.behave]
paths = ["features"]
show_timings = true
show_skipped = false
tags = ["~@pending"]
