[project]
name = "sc-imap-mcp"
version = "1.0.0"
description = "Security-focused Model Context Protocol server mediating LLM access to IMAP mailboxes under strict, auditable policy."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
readme = "../README.md"

# Server runtime dependencies. This project is self-contained: no imports
# from ../bdd/ or any other sibling directory.
dependencies = [
    "aioimaplib>=1.1.0",
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
imap-mcp = "imap_mcp.__main__:main"
imap-mcp-oauth-bootstrap = "imap_mcp.auth.oauth_bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imap_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["imap_mcp"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
# A `feat!` or `BREAKING CHANGE` on a 0.x project must bump major,
# not minor. The previous default (major_on_zero=false) silently
# turned the 2026-06 tool-surface hard cut into a 0.16.0 minor bump.
# Honouring breaking changes as such is the contract SemVer
# promises; leaving this off conflated "I am pre-1.0" with "my
# breaking changes don't matter to my consumers" — they always
# do, regardless of whether the version starts with 0 or 1.
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
build_command = "python -m build"
