[project]
name = "mock-oauth"
version = "0.1.0"
description = "Wrapper around navikt/mock-oauth2-server for the imap-mcp BDD suite."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "requests-oauthlib>=2.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_oauth"]
